--- a/templates/index.html
+++ b/templates/index.html
@@ -37,10 +37,13 @@
     <div class="custom-container">
       <h2 class="custom-heading">Upload MP3 File</h2>
 
-      {% with messages = get_flashed_messages(with_categories=true) %} {% if
-      messages %} {% for category, message in messages %}
+      {% with messages = get_flashed_messages(with_categories=true) %} 
+      {% if messages %} 
+      {% for category, message in messages %}
       <div class="alert alert-danger" role="alert">{{ message }}</div>
-      {% endfor %} {% endif %} {% endwith %}
+      {% endfor %} 
+      {% endif %} 
+      {% endwith %}
 
       <form
         action="/"
