--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,7 +1,13 @@
+.input-group{
+    display: flex;
+    flex-direction: column;
+}
 .input-group-text{
 display: flex;
 justify-content: center;
 align-items: center;
+overflow: auto;
+width: 100%;
 }
 .custom-container {
 background-color: #fff;
@@ -33,6 +39,7 @@ border: none;
 border-radius: 4px;
 cursor: pointer;
 transition: background-color 0.3s ease;
+margin-top: 10px;
 }
 .custom-submit-btn:hover {
 background-color: #0056b3;
