--- a/templates/index.html
+++ b/templates/index.html
@@ -38,11 +38,11 @@
       <h2 class="custom-heading">Upload MP3 File</h2>
 
       {% with messages = get_flashed_messages(with_categories=true) %} 
-      {% if messages %} 
-      {% for category, message in messages %}
-      <div class="alert alert-danger" role="alert">{{ message }}</div>
-      {% endfor %} 
-      {% endif %} 
+        {% if messages %} 
+          {% for category, message in messages %}
+            <div class="alert alert-{{ category }}" role="alert">{{ message }}</div>
+          {% endfor %} 
+        {% endif %} 
       {% endwith %}
 
       <form
