--- a/static/css/index.css
+++ b/static/css/index.css
@@ -30,6 +30,7 @@ border: 1px solid #ccc;
 border-radius: 4px;
 background-color: #f9f9f9;
 width: 100%;
+color: #212529;
 }
 .custom-submit-btn {
 padding: 10px 20px;
