--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
       {% with messages = get_flashed_messages(with_categories=true) %} 
         {% if messages %} 
           {% for category, message in messages %}
-            <div class="alert alert-{{ category }}" role="alert">{{ message }}</div>
+            <div class="alert alert-{{ category }}" role="alert"><strong>{{ message }}</strong></div>
           {% endfor %} 
         {% endif %} 
       {% endwith %}
